syntax = "proto3";

// Services
service TaskService {
    rpc listAll(Empty) returns (TaskList) {}
    
    rpc AddTask(Task) returns (Task) {}

    rpc UpdateTask(TaskRequest) returns (Task) {}
    rpc DeleteTask(TaskRequest) returns (Task) {}

}

// Messages
message Empty {}

message Task {
    int32 id = 1;
    string title = 2;
    string description = 3;
}

message TaskList {
    repeated Task tasks = 1;
}

message TaskRequest {
    int32 id = 1;
}
